--- a/FINALPROJOCT/templates/FYPAPP/add_course.html
+++ b/FINALPROJOCT/templates/FYPAPP/add_course.html
@@ -1,6 +1,8 @@
-{% extends 'FYPAPP/home.html'%}
+{% extends 'mtihani/home.html' %}
 
-{% block content%}
+{% block content %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -273,158 +275,51 @@ $(document).ready(function(){
 			<div class="table-title">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>Manage <b>Course</b></h2>
+						<h2>Add <b>Course</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Course</span></a>
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
+						<a href="{% url 'FYPAPP:add_course' %}" class="btn btn-danger">Add Question</a>
+						<!-- <a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						 -->
 					</div>
 				</div>
 			</div>
-			<table class="table table-striped table-hover">
-				<thead>
-					<tr>
-							
-						<th>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="selectAll">
-								<label for="selectAll"></label>
-							</span>
-						</th>
-						<th>Course Name</th>
-						<th>Course Code</th>
-						<!-- <th>Actions</th> -->
-						<th>Actions</th>
-					</tr>
-				</thead>
-				{% for c in course %}
-				<tr>
-					<td>
-						<span class="custom-checkbox">
-							<input type="checkbox" id="{{c.courseName}}">
-							<label for="selectAll"></label>
-						</span>
-					</td>
-					<td>{{c.courseName}}</td>
-					<td>{{c.courseCode}}</td>
-					<td>
-						<div class="container-fluid">
-							<div class="row">
-								<div class="col-6">
-									<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-									<!-- <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
-								</div>
-
-								<div class="col-6">
-									<!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
-									<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-								</div>
-							</div>
-						</div>
-					</td>
-				</tr>
-				{% endfor %}
-			</table>
-			<!-- <div class="clearfix">
-				<div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-				<ul class="pagination">
-					<li class="page-item disabled"><a href="#">Previous</a></li>
-					<li class="page-item"><a href="#" class="page-link">1</a></li>
-					<li class="page-item"><a href="#" class="page-link">2</a></li>
-					<li class="page-item active"><a href="#" class="page-link">3</a></li>
-					<li class="page-item"><a href="#" class="page-link">4</a></li>
-					<li class="page-item"><a href="#" class="page-link">5</a></li>
-					<li class="page-item"><a href="#" class="page-link">Next</a></li>
-				</ul>
-			</div> -->
+			<form method="POST" action="#">
+        {% csrf_token %}
+        <!-- {{ form }} -->
+                <!-- Gutter g-1 -->
+<div class="row g-1">
+    <div class="col">
+      <!-- Name input -->
+      <div class="form-outline">
+        <!-- <input type="text" id="form9Example1" name="somo" class="form-control" /> -->
+        <label class="form-label" for="form9Example1">CourseName</label>
+        {{ form.courseName }}
+      </div>
+    </div>
+    <div class="col">
+    
+      <div class="form-outline">
+        <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
+        <label class="form-label" for="form9Example3">CourseCode</label>
+        {{ form.courseCode }}
+      </div>
+    </div>
+  </div>
+        
+        <div class="mt-5">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="reset" class="btn btn-secondary ms-2">Reset</button>
+            <a href="{% url 'FYPAPP:course_manage' %}" class="btn btn-outline-dark ms-2">List All</a>
+        </div>
+    </form>
+		
 		</div>
 	</div>        
 </div>
-<!-- Edit Modal HTML -->
-<div id="addCourseModal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form action="" method="POST">
-				{% csrf_token %}
-				<div class="modal-header">						
-					<h4 class="modal-title">Add Course</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">					
-					<div class="form-group">
-						<!-- <input type="text" class="field" placeholder="coursename" name="coursename"> -->
-						<label>Course Name</label>
-						<input type="text" class="form-control" required name="coursename">
-					</div>
-					
-					<div class="form-group">
-						<!-- <input type="text" class="field" placeholder="coursecode" name="coursecode" > -->
-						<label>Course Code</label>
-						<input type="text" class="form-control" required name="coursecode">
-					</div>					
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-success" value="Add">
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-<!-- Edit Modal HTML -->
-<div id="editCourseModal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form action="" method="POST">
-				
-				<div class="modal-header">						
-					<h4 class="modal-title">Edit Course</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">					
-					<div class="form-group">
-						<label>Course Name</label>
-						<input type="text" class="form-control" required>
-					</div>
-					
-					<div class="form-group">
-						<label>Course Code</label>
-						<input type="text" class="form-control" required>
-					</div>					
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-info" value="Save">
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-<!-- Delete Modal HTML -->
-<div id="deleteCourseModal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form>
-				<div class="modal-header">						
-					<h4 class="modal-title">Delete Course</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">					
-					<p>Are you sure you want to delete these Records?</p>
-					<p class="text-warning"><small>This action cannot be undone.</small></p>
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-danger" value="Delete">
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
+
+
 </body>
 </html>
 
-
-
-
-{% endblock content%}
+{% endblock content%} 
