--- a/FINALPROJOCT/templates/FYPAPP/module_manage.html
+++ b/FINALPROJOCT/templates/FYPAPP/module_manage.html
@@ -283,44 +283,45 @@ $(document).ready(function(){
 				</div>
 			</div>
 			<table class="table table-striped table-hover">
-                
-                    <thead>
-                        <tr>
-                            <th>somo</th>
-                            <th>Topic</th>
-                            <!-- <th>questionTypee</th> -->
-                            <th>questionLevel</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    {% for question in question_manage %}
-                    <tr>
-                        <td>{{question.somo}}</td>
-                        <td>{{question.topic}}</td>
-                        <!-- <td>{{data.questionType}}</td> -->
-                        <td>{{question.questionLevel}}</td>
-                        <td>
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</a>
+				<thead>
+					<tr>
+							
+						<th>
+							<span class="custom-checkbox">
+								<input type="checkbox" id="selectAll">
+								<label for="selectAll"></label>
+							</span>
+						</th>
+						<th>Module Name</th>
+						<th>Module Code</th>
+                       	<th>Actions</th>
+					</tr>
+				</thead>
+				{% for m in masomo %}
+				<tr>
+					<td>
+						<span class="custom-checkbox">
+							<input type="checkbox" id="{{c.courseName}}">
+							<label for="selectAll"></label>
+						</span>
+					</td>
+					<td>{{m.moduleName}}</td>
+					<td>{{m.moduleCode}}</td>
+					<td>
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-6">
+                          	</div>
 
-										<!-- <a href="{% url 'FYPAPP:add_question' %}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
-										<!-- <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
-									</div>
-	
-									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</a>
-
-										<!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
-										<!-- <a href="{% url 'FYPAPP:delete_question' question.id %}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
-									</div>
+								<div class="col-6">
+									<!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
+									<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
 								</div>
 							</div>
-						</td>
-                    </tr>
-                    {% endfor %}
-                
+						</div>
+					</td>
+				</tr>
+				{% endfor %}
 			</table>
 		
 		</div>
