--- a/FINALPROJOCT/templates/mtihani/add_exam.html
+++ b/FINALPROJOCT/templates/mtihani/add_exam.html
@@ -1,4 +1,4 @@
-{% extends 'FYPAPP/home.html' %}
+{% extends 'mtihani/home.html' %}
 
 {% block content %}
 
@@ -275,53 +275,112 @@ $(document).ready(function(){
 			<div class="table-title">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>Manage <b>Question</b></h2>
+						<h2>Manage <b>Module</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<!-- <a href="{% url 'FYPAPP:add_question' %}" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a> -->
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>											</div>
+						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
+						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+					</div>
 				</div>
 			</div>
-			<table class="table table-striped table-hover">
-                
-                    <thead>
-                        <tr>
-                            <th>somo</th>
-                            <th>Topic</th>
-                            <!-- <th>questionTypee</th> -->
-                            <th>questionLevel</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    {% for question in question_manage %}
-                    <tr>
-                        <td>{{question.somo}}</td>
-                        <td>{{question.topic}}</td>
-                        <!-- <td>{{data.questionType}}</td> -->
-                        <td>{{question.questionLevel}}</td>
-                        <td>
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</a>
+			<form method="POST" action="#">
+                {% csrf_token %}
+                <div class="row g-1">
+                    <div class="col">
+                      <!-- Name input -->
+                      <div class="form-outline">
+                        <!-- <input type="text" id="form9Example1" name="somo" class="form-control" /> -->
+                        <label class="form-label" for="form9Example1">Semeter</label>
+                        {{ form.semeter }}
+                      </div>
+                    </div>
+                    <div class="col">
+                    
+                      <div class="form-outline">
+                        <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
+                        <label class="form-label" for="form9Example3">Course</label>
+                        {{ form.course }}
+                      </div>
+                    </div>
 
-										<!-- <a href="{% url 'FYPAPP:add_question' %}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
-										<!-- <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
-									</div>
-	
-									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</a>
+                    <div class="col">
+                    
+                        <div class="form-outline">
+                          <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
+                          <label class="form-label" for="form9Example3">Module</label>
+                          {{ form.module }}
+                        </div>
+                      </div>
+                  </div>
+                  
+                  <hr />
+                  
+                  <!-- Gutter g-5 -->
+                  <div class="row g-5">
+                    <div class="col">
+                      <!-- Name input -->
+                      <div class="form-outline">
+                        <!-- <input type="text" id="form9Example3" name="questiontype" class="form-control" /> -->
+                        <label class="form-label" for="form9Example3">ExaminationType</label>
+                        {{ form.examinationType }}
+                        
+                      </div>
+                    </div>
+                    <div class="col">
+                      <!-- Email input -->
+                      <div class="form-outline">
+                        <!-- <input type="text" id="form9Example3" name="questionLevel" class="form-control" /> -->
+                        <label class="form-label" for="form9Example3">ExaminationName</label>
+                        {{ form.examinationName }}
+                      </div>
+                    </div>
+                  </div>
+                  <br>
+                  <hr>
+                  <div class="col">
+                    <!-- Email input -->
+                    <div class="form-outline">
+                      <!-- <input type="text" id="form9Example3" name="questionLevel" class="form-control" /> -->
+                      <label class="form-label" for="form9Example3">ExamDuration</label>
+                      {{ form.examDuration }}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="col">
+                    <!-- Email input -->
+                    <div class="form-outline">
+                      <!-- <input type="text" id="form9Example3" name="questionLevel" class="form-control" /> -->
+                      <label class="form-label" for="form9Example3">ExamFullmark</label>
+                      {{ form.examFullmark }}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row g-5">
+                    
+                    <div class="col">
+                        <!-- Email input -->
+                        <div class="form-outline">
+                          <!-- <input type="text" id="form9Example3" name="questiontext" class="form-control" /> -->
+                          <label class="form-label" for="form9Example3">ExaminationDescription</label>
+                          {{ form.examinationDescription }}
+                        </div>
+                      </div>
 
-										<!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
-										<!-- <a href="{% url 'FYPAPP:delete_question' question.id %}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
-									</div>
-								</div>
-							</div>
-						</td>
-                    </tr>
-                    {% endfor %}
-                
-			</table>
+                      <div class="col">
+                    
+                        <div class="form-outline">
+                          <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
+                          <label class="form-label" for="form9Example3">QuestionSection</label>
+                          {{ form.questionSection }}
+                        </div>
+                      </div>
+                  </div>
+                  <div class="mt-5">
+					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="reset" class="btn btn-secondary ms-2">Reset</button>
+					
+				</div>
+            </form>
 		
 		</div>
 	</div>        
