--- a/FINALPROJOCT/templates/mtihani/exam_manage.html
+++ b/FINALPROJOCT/templates/mtihani/exam_manage.html
@@ -1,4 +1,4 @@
-{% extends 'FYPAPP/home.html' %}
+{% extends 'mtihani/home.html' %}
 
 {% block content %}
 
@@ -275,49 +275,50 @@ $(document).ready(function(){
 			<div class="table-title">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>Manage <b>Question</b></h2>
+						<h2>Manage <b>Module</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<!-- <a href="{% url 'FYPAPP:add_question' %}" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a> -->
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>											</div>
+						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
+						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+					</div>
 				</div>
 			</div>
 			<table class="table table-striped table-hover">
                 
                     <thead>
                         <tr>
-                            <th>somo</th>
-                            <th>Topic</th>
-                            <!-- <th>questionTypee</th> -->
-                            <th>questionLevel</th>
-                            <th>Action</th>
+                            <th>examinationType</th>
+                            <th>examinationName</th>
+                            <th>semeter</th>
+                            <th>course</th>
+                            <!-- <th>module</th> -->
                         </tr>
                     </thead>
-                    {% for question in question_manage %}
+                    {% for exam in exam_manage %}
                     <tr>
-                        <td>{{question.somo}}</td>
-                        <td>{{question.topic}}</td>
-                        <!-- <td>{{data.questionType}}</td> -->
-                        <td>{{question.questionLevel}}</td>
-                        <td>
+                        <td>{{ exam.examinationType }}</td>
+                        <td>{{ exam.examinationName }}</td>
+                        <td>{{ exam.semeter }}</td>
+                    	<td>
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</a>
-
-										<!-- <a href="{% url 'FYPAPP:add_question' %}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
+										<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
 										<!-- <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
 									</div>
 	
 									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</a>
-
 										<!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
-										<!-- <a href="{% url 'FYPAPP:delete_question' question.id %}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
+										<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
 									</div>
 								</div>
 							</div>
 						</td>
+                        <!-- <td>{{ exam.module }}</td> 
+						<td>{{ exam.examDuration }}</td> 
+						<td>{{ exam.examFullmark }}</td> 
+						<td>{{ exam.questionSection }}</td> 
+						<td>{{ exam.examinationDescription }}</td>  -->
                     </tr>
                     {% endfor %}
                 
