--- a/FINALPROJOCT/templates/mtihani/exam_manage.html
+++ b/FINALPROJOCT/templates/mtihani/exam_manage.html
@@ -303,8 +303,7 @@ $(document).ready(function(){
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-6">
-										<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-										<!-- <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
+										<a href="{% url 'mtihani:update_exam' exam.id %}" class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</a>
 									</div>
 	
 									<div class="col-6">
