--- a/FINALPROJOCT/templates/mtihani/add_exam.html
+++ b/FINALPROJOCT/templates/mtihani/add_exam.html
@@ -275,7 +275,7 @@ $(document).ready(function(){
 			<div class="table-title">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>Manage <b>Module</b></h2>
+						<h2>Manage <b>Exam</b></h2>
 					</div>
 					<div class="col-sm-6">
 						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
