--- a/FINALPROJOCT/templates/FYPAPP/dashboard.html
+++ b/FINALPROJOCT/templates/FYPAPP/dashboard.html
@@ -2,129 +2,352 @@
 
 
 {% block content%}
+
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <style type="text/css">
-      a:link {
-        text-decoration: none;
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Examination Machine</title>
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      .dashboard-header{
+      background: linear-gradient(to right, #2634eb, #829df3 90%);
+      border-radius: 5px;
+      background-color: rgba(113, 185, 202, 255);
+      color: white;
       }
-  
-      .order-card {
-        color: rgb(255, 255, 255);
+      .containerkuu{
+      /* background-color: #F56565; */
+      position: relative;
+      margin-left: 16em;
+      margin-top: 1em;
+      width: 83em;
+      height: 29em;
+    }
+    .card{
+      /* display: inline-flex; */
+      width: 19rem;
+      height: 7em;
+      margin-top: 1em;
+      margin-left: 1em;
+      margin-right: 0.6em;
+      margin-bottom: 1em;
+      background: linear-gradient(to right, #2634eb, #829df3 90%);
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+      border-radius: 5px;
+    }
+    .card-body{
+      margin-top: 1em;
+      width: 20em;
+      height: 7em;
+      /* background-color: #F56565; */
+      /* color: black; */
+    }
+    .card2{
+      /* display: inline-flex; */
+      width: 19rem;
+      height: 7em;
+      margin-top: 1em;
+      margin-left: 1em;
+      margin-right: 0.6em;
+      margin-bottom: 1em;
+      background: linear-gradient(to right, #4CAF50, #6fbf73);
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+      border-radius: 5px;
+      /* background: linear-gradient(to right, #e93e3e, #eb5c5c 90%); */
       }
-  
-      .bg-c-blue {
-        background: #04868f;
-      }
-  
-      .bg-c-green {
-        background:#4C51BF;
-      }
-  
-      .bg-c-yellow {
-        background: #F56565;
-      }
-  
-      .bg-c-pink {
-        background:#3186ca;
-      }
-  
-  
-      .card {
-        
-        -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-        box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-        margin-bottom: 30px;
-        -webkit-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-      }
-  
-      .card .card-block {
-        padding: 25px;
-      }
-  
-      .order-card i {
-        font-size: 26px;
-      }
-  
-      .f-left {
-        float: left;
-      }
-  
-      .f-right {
-        float: right;
-      }
-      header {
-      left: 0px;
-      right: 0px;
+      .card2-body{
+      margin-top: 1em;
+      width: 20em;
+      height: 7em;
+      /* background-color: #F56565; */
+      /* color: black; */
+    }
+    .card3{
+      /* display: inline-flex; */
+      width: 19rem;
+      height: 7em;
+      margin-top: 1em;
+      margin-left: 1em;
+      margin-right: 0.6em;
+      margin-bottom: 1em;
+      background: linear-gradient(to right, #db6f26, #e69056 90%);
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+      border-radius: 5px;
+    }
+    .card3-body{
+      margin-top: 1em;
+      width: 20em;
+      height: 7em;
+      /* background-color: #F56565; */
+      /* color: black; */
+    }
+    .card4{
+      /* display: inline-flex; */
+      width: 19rem;
+      height: 7em;
+      margin-top: 1em;
+      margin-left: 1em;
+      margin-right: 0.6em;
+      margin-bottom: 1em;
+      /* background-color: rgba(235,79,80,255); */
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+      border-radius: 5px;
+      background: linear-gradient(to right, #e93e3e, #eb5c5c 90%);
+    }
+    .card4-body{
+      margin-top: 1em;
+      width: 20em;
+      height: 7em;
+      /* background-color: #F56565; */
+      /* color: black; */
+    }
+    .row{
+      /* white-space: 2em; */
+      position: relative;
+    }
+    .quick{
+      margin-left: 3em;
+      border-radius: 5px;
+      width: 37em;
+      height: 11em;
+      margin-top: 2em;
+      background-color: white;
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+    
+    }
+    .quick-links-btn{
+      background-color: white;
+      box-shadow: 3px 3px 2.5px 5px rgb(242, 244, 245);
+      width: 35em;
+      height: 5.5em;
+      margin-left: 14px;
+    }
+    .quick-links-btn-header{
+      /* margin-top: -0.7em; */
+      margin-left: 0.9em;
+      margin-bottom: -0.3em;
+    }
+    .quick-header{
+      /* margin-top: 2em; */
+      margin-left: 0.6em;
+      color: black;
+    }
+    .notification{
+      margin-top: -12em;
+      position: relative;
+      margin-left: 45em;
+      margin-right: 0.9em;
+      height: 25em;
+      background-color: white;
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+      border-radius: 5px;
+    }
+    .dashboard-header{
+      /* background-color: #04868f; */
+      margin-top: 1em;
+      position: relative;
+      margin-left: 0.2em;
+      margin-right: 2em;
+    }
+    /* .btn{
+      margin-top: 2em;
+      white-space: 2em;
+    } */
+    .space {
+      width: 1px;
+      height: auto;
+      display: inline-block;
+    }
+    .spacee {
+      width: 2em;
+      height: auto;
+      display: inline-block;
+    }
+    .card-columns{
+      margin-left: 7.3em;
+      margin-right: 18em;
+      width: 50em;
+      height: 30em;
+    }
+    .nafasi{
+    display: inline-flex;
+    /* background-color: aqua; */
+   }
+   .a444{
+      /* background-color: #F56565; */
+      height: 11em;
+      
+   }
+   .quick-links-btn2{
+      /* background-color: rgb(192, 6, 6); */
+      width: 17em;
+      height: 5em;
+      margin-left: 14px;
+      /* display: inline-flex; */
+    }
+    .rowcol{
+      background-color: white;
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+      margin-top: 1.9em;
+      border-radius: 5px;
+      height: 25em;
+      /* width: 23em; */
+
+    }
+    .row{
+      margin-top: 5.5em;
+    }
+    .col{
+      display: inline-flex;
+      margin-top: -4em;
+    }
+    .masomoyangu{
+      /* background-color: #4C51BF; */
+      margin-top: 2em;
+      background-color: white;
+      box-shadow: 2px 2px 2.5px 3px rgb(242, 244, 245);
+    }
+    .card-header{
+      margin-left: 1px;
+      margin-top: 0.6em;
+      color: white;
     }
     
     </style>
-  </head>
-<br><br>
-  <!-- <div class="row"> -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-xl-3">
-        <a href="admin-view-student" style="text-decoration: none;color:white;">
-        <div class="card bg-c-pink order-card">
-          <div class="card-block">
-            <h6 class="m-b-20">Registered Students </h6>
-            <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span></span></h2>
-          </div>
-        </div>
-      </a>
-      </div>
-      
+ 
+</head>
+<body>
+
+  <div class="containerkuu">
+    <div class="dashboard-header">
+      <h2 class="text-center">DASHBOARD</h2>
+    </div>
+    <div class="nafasi">
+      <div class="maswali">
+        <div class="rowcol">
+            <h3 class="quick-header">Quick Links</h3><hr>
+            <div class="row">
+              <div class="col">
+                <div class="card">
+                  <p class="card-header "><b>TOTAL COURSE</b></p>
+                  <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{ count }}</span></h2>
+                </div>
+                <div class="space2"></div>
+                <div class="card2">
+                  <p class="card-header"><b>TOTAL QUESTIONS</b></p>
+                </div>
+              </div>
+            </div>
   
-      <div class="col-md-4 col-xl-3">
-        <a href="admin-view-teacher" style="text-decoration: none;color:white;">
-        <div class="card bg-c-green order-card">
-          <div class="card-block">
-            <h6 class="m-b-20">Total Teachers </h6>
-            <h2 class="text-right"><i class="fas fa-chalkboard-teacher f-left"></i><span></span></h2>
-          </div>
+            <div class="row">
+              <div class="col">
+                <div class="card3">
+                  <p class="card-header"><b>TOTAL COURSE</b></p>
+                </div>
+                <div class="space2"></div>
+                <div class="card4">
+                  <p class="card-header"><b>TOTAL EXAMS</b></p>
+                </div>
+              </div>
+           </div>
+
+           <div class="masomoyangu">
+            <h3 class="quick-header">Quick Links</h3>
+          <div class="masomoyangu-table">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td colspan="2">Larry the Bird</td>
+                  <td>@twitter</td>
+                </tr>
+              </tbody>
+            </table>
+          </div> 
+         </div> 
         </div>
-      </a>
-      </div>
-  
-      <div class="col-md-4 col-xl-3">
-        <a href="admin-view-course" style="text-decoration: none;color:white;">
-        <div class="card bg-c-blue order-card">
-          <div class="card-block">
-            <h6 class="m-b-20">Total Courses</h6>
-           <h2 class="text-right"><i class="fas fa-book f-left"></i><span>{{total_course}}</span></h2> 
-          </div>
-        </div>
-      </a>
-      </div>
-  
-      <div class="col-md-4 col-xl-3">
-        <a href="admin-view-question" style="text-decoration: none;color:white;">
-        <div class="card bg-c-yellow order-card">
-          <div class="card-block">
-            <h6 class="m-b-20">Available Questions</h6>
-            <h2 class="text-right"><i class="fas fa-question-circle f-left"></i><span></span></h2>
-          </div>
-        </div>
-      </a>
+        
       </div>
 
-      
+    <div class="quick">
+      <h3 class="quick-header">Quick Links</h3><hr>
+      <div class="quick-links-btn">
+        <h6 class="quick-links-btn-header">ADD QUESTION FOR</h6><hr>
+        <div class="button">
+          <button class="btn" style="background: linear-gradient(to right, #2634eb, #829df3 90%);">MULTIPE CHOICE</button>
+          <button class="btn"style="background: linear-gradient(to right, #4CAF50, #6fbf73)">SHORT TERMS</button>
+          <button class="btn" style="background: linear-gradient(to right, #db6f26, #e69056 90%);">LONG TERMS</button>
+          <button class="btn " style="background: linear-gradient(to right, #e93e3e, #eb5c5c 90%);">MANAGE QNS</button>
+        </div>
+      </div>
+   </div> 
+   
+  </div>
+
+
+  <div class="notification">
+    <h3 class="quick-header">Quick Links</h3><hr>
+  <div class="quick-links-btn ">
+    <h6 class="quick-links-btn-header">COURSE</h6><hr>
+    <div class="button">
+      <button class="btn" style="background: linear-gradient(to right, #2634eb, #829df3 90%);">ADD COURSE</button>
+      <button class="btn " style="background: linear-gradient(to right, #e93e3e, #eb5c5c 90%);">MANAGE COURSE</button>
     </div>
+  </div><br>
+  <div class="quick-links-btn">
+    <h6 class="quick-links-btn-header">MODULE</h6><hr>
+    <div class="button">
+      <button class="btn" style="background: linear-gradient(to right, #2634eb, #829df3 90%);">ADD MODULE</button>
+      <button class="btn " style="background: linear-gradient(to right, #e93e3e, #eb5c5c 90%);">MANAGE MODULE</button>
+    </div>
+  </div><BR>
+  <div class="quick-links-btn">
+    <h6 class="quick-links-btn-header">EXAM</h6><hr>
+    <div class="button">
+      <button class="btn btn-primary">EXAM</button>
+      <button class="btn " style="background: linear-gradient(to right, #e93e3e, #eb5c5c 90%);">MANAGE EXAM</button>
+    </div>
+  </div>
   </div>
   
 
-
-<br><br><br><br><br><br><br><br><br><br>
-
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
+
+</div>
+
+</body>
+</html>
+
+
 {% endblock content %}
+
