--- a/FINALPROJOCT/templates/mtihani/add_exam.html
+++ b/FINALPROJOCT/templates/mtihani/add_exam.html
@@ -277,13 +277,10 @@ $(document).ready(function(){
 					<div class="col-sm-6">
 						<h2>Manage <b>Exam</b></h2>
 					</div>
-					<div class="col-sm-6">
-						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
-					</div>
+					
 				</div>
 			</div>
-			<form method="POST" action="#">
+			<form method="POST" action="{% url 'mtihani:select_questions' %}">
                 {% csrf_token %}
                 <div class="row g-1">
                     <div class="col">
@@ -337,33 +334,68 @@ $(document).ready(function(){
                   </div>
                   <br>
                   <hr>
-                  <div class="col">
-                    <!-- Email input -->
-                    <div class="form-outline">
-                      <!-- <input type="text" id="form9Example3" name="questionLevel" class="form-control" /> -->
-                      <label class="form-label" for="form9Example3">ExamDuration</label>
-                      {{ form.examDuration }}
+
+				  <div class="row g-1">
+                    <div class="col">
+                      <!-- Name input -->
+                      <div class="form-outline">
+						<label for="num_questions">Number of multiple-choice questions:</label>
+    					<input type="number" name="num_questions" id="num_questions" required><br><br>
+                      </div>
                     </div>
+                    <div class="col">
+                    
+                      <div class="form-outline">
+						<label for="num_shortquestions">Number of short-answer questions:</label>
+						<input type="number" name="num_shortquestions" id="num_shortquestions" required><br><br>
+                      </div>
+                    </div>
+
+                    <div class="col">
+                    
+                        <div class="form-outline">
+							<label for="num_longquestions">Number of long-answer questions:</label>
+							<input type="number" name="num_longquestions" id="num_longquestions" required><br><br>
+                        </div>
+                      </div>
                   </div>
+                  
+
+
+				  
                   <hr>
-                  <div class="col">
-                    <!-- Email input -->
-                    <div class="form-outline">
-                      <!-- <input type="text" id="form9Example3" name="questionLevel" class="form-control" /> -->
-                      <label class="form-label" for="form9Example3">ExamFullmark</label>
-                      {{ form.examFullmark }}
+                  <div class="row g-1">
+                    <div class="col">
+                      <!-- Name input -->
+                      <div class="form-outline">
+                        <!-- <input type="text" id="form9Example1" name="somo" class="form-control" /> -->
+                        <label class="form-label" for="form9Example1">ExamDuration</label>
+                        {{ form.examDuration }}
+                      </div>
                     </div>
+                    <div class="col">
+                    
+                      <div class="form-outline">
+                        <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
+                        <label class="form-label" for="form9Example3">ExamFullmark</label>
+                        {{ form.examFullmark }}
+                      </div>
+                    </div>
+
                   </div>
                   <hr>
                   <div class="row g-5">
                     
                     <div class="col">
                         <!-- Email input -->
+                        <div class="col">
+                    
                         <div class="form-outline">
-                          <!-- <input type="text" id="form9Example3" name="questiontext" class="form-control" /> -->
-                          <label class="form-label" for="form9Example3">ExaminationDescription</label>
-                          {{ form.examinationDescription }}
+                          <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
+                          <label class="form-label" for="form9Example3">QuestionSection</label>
+                          {{ form.questionSection }}
                         </div>
+                      </div>
                       </div>
 
                       <div class="col">
