--- a/FINALPROJOCT/templates/mtihani/home.html
+++ b/FINALPROJOCT/templates/mtihani/home.html
@@ -7,44 +7,25 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Hello, world!</title>
-    <!-- Font Awesome -->
+    <!-- Font Awesome
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
       rel="stylesheet"
     />
-    <!-- Google Fonts -->
-    <link
+     Google Fonts -->
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> -->
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous">
-    </script>
+    </script> --> 
     <style>
 
-        ::-webkit-scrollbar {
-            width: 5px;
-        }
-
-        /* Track */
-        ::-webkit-scrollbar-track {
-            box-shadow: inset 0 0 5px rgb(0, 0, 0, 0.1); 
-            border-radius: 10px;
-        }
+      
         
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-            background: rgb(69, 162, 158, 0.2); 
-            border-radius: 10px;
-        }
-
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-            background: rgb(69, 162, 158, 0.6); 
-            cursor: pointer; 
-        }
         body {
             background-color: #e6e6e6;
         }
@@ -313,13 +294,7 @@
     </div>
  
 
-    <script>
-        let sidebarToggle = document.querySelector(".sidebarToggle");
-        sidebarToggle.addEventListener("click", function(){
-            document.querySelector("body").classList.toggle("active");
-            document.getElementById("sidebarToggle").classList.toggle("active");
-        })
-    </script>
+   
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
